--- a/Strings.ipynb
+++ b/Strings.ipynb
@@ -181,8 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "34649b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item1:tanu item2:tanya\n"
+     ]
+    }
+   ],
+   "source": [
+    "# format\n",
+    "x=\"item1:{x} item2:{y}\".format(x='tanu',y='tanya')\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "638bc954",
    "metadata": {},
    "outputs": [],
    "source": []
