--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -53,25 +53,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "edeaa39c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'John', 'age': 26, 'salary': 25000, 'dept': 'sales'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "emp1['age']=26\n",
-    "print(emp1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "9eb6a624",
    "metadata": {},
@@ -85,6 +66,9 @@
     }
    ],
    "source": [
+    "emp1['age']=26\n",
+    "print(emp1)\n",
+    "\n",
     "del emp1[\"age\"]\n",
     "print(emp1)"
    ]
@@ -243,13 +227,91 @@
     "\n",
     "emp4={'abc':\"shinchan\",'father':\"sam\",'Mother':\"sanya\"}\n",
     "emp1.update(emp4)\n",
-    "print(emp1)"
+    "print(emp1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "93e6835d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of students:2\n",
+      "enter name of student: tanu\n",
+      "enter total marks: 450\n",
+      "enter name of student: tanya\n",
+      "enter total marks: 440\n",
+      "Dictionary of students is: \n",
+      "{'tanu': 450, 'tanya': 440}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input dictionary\n",
+    "n=int(input(\"No. of students:\"))\n",
+    "dic={}\n",
+    "for i in range(n):\n",
+    "    key=input(\"enter name of student: \")\n",
+    "    value=int(input(\"enter total marks: \"))\n",
+    "    dic[key]=value\n",
+    "print(\"Dictionary of students is: \")\n",
+    "print(dic)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "dd27d097",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d540599e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of students:1\n",
+      "enter name of student: tanu\n",
+      "enter total marks: [1,2,3,4]\n",
+      "Dictionary of students is: \n",
+      "{'tanu': [1, 2, 3, 4]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input dictionary\n",
+    "n=int(input(\"No. of students:\"))\n",
+    "dic={}\n",
+    "for i in range(n):\n",
+    "    key=input(\"enter name of student: \")\n",
+    "    value=eval(input(\"enter total marks: \"))\n",
+    "    dic[key]=value\n",
+    "print(\"Dictionary of students is: \")\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42438a06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8f9c336",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
