--- a/lists.ipynb
+++ b/lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "65ccf8b9",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e1996fae",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "8ee815d0",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "b0f3ec2b",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ml1\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m)\n",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ml1\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m)\n",
       "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
      ]
     }
@@ -96,19 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f192a277",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A', 'i']\n",
-      "['u', 'o', 'i', 'e', 'A']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list slicing\n",
     "print(L[0:4:2])\n",
@@ -119,20 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "f5962cac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 4]\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[2, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# appending elements to end of list\n",
     "l1=[1,2,3,4,5]\n",
@@ -148,39 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "2b467e72",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l2.index(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "596af8fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 4, 4, 5, 6, 4, 5, 6, 4, 5, 6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3 times executed=>last 3 elements 3 times\n",
     "l1.extend(l2)\n",
@@ -189,20 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "8f2fd130",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 5, 6, 5, 6, 5, 6]\n",
-      "[2, 6, 5, 6, 5, 6]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(l1)\n",
     "l1.remove(5)\n",
@@ -213,19 +165,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "0c2a91c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['u', 'o', 'i', 'e', 'A']\n",
-      "['A', 'e', 'i', 'o', 'u']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(L)\n",
     "L.reverse()\n",
@@ -234,20 +177,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "f3e305a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 55, 3, 5, 6, 1]\n",
-      "[1, 2, 3, 5, 6, 55]\n",
-      "[55, 6, 5, 3, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l3=[2,55,3,5,6,1]\n",
     "print(l3)\n",
@@ -259,19 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "ce85ca26",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter a list:[1,2,3,4]\n",
-      "<class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE:eval function\n",
     "\n",
@@ -281,16 +205,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bbb9f097",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=3*[5] #list of 3 elements with values 5\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3477ac78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to delete element at particular position\n",
+    "\n",
+    "a=[1,2,3,4,5,6]\n",
+    "print(a)\n",
+    "a.pop(2)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3477ac78",
+   "id": "e05c9a4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -312,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
